# simple-server-asio

./: CMakeLists.txt  README.md  conanfile.txt
include/simple-server-asio/: client.h  network_participant.h  server.h
proto/: ClientUpdate.proto  ServerUpdate.proto
src/: CMakeLists.txt  run_client.cpp  run_server.cpp
